@@ -2155,6 +2155,10 @@ common_handle_option (struct gcc_options *opts,
       dc->dc_inhibit_warnings = true;
       break;
 
+    case OPT_fmax_errors_:
+      dc->max_errors = value;
+      break;
+
     case OPT_fuse_linker_plugin:
       /* No-op. Used by the driver and passed to us because it starts with f.*/
       break;
